Bug 1419285 - Part 1. Calculate composition rect for remote XUL frame. r=masayuki

Out of process support for Web extension creates another XUL widget for it.
We should calculate correct offset for Web Extension's remote widget.

MozReview-Commit-ID: AaALzLeKLsM